--- a/idhlagencytechtest/src/App.scss
+++ b/idhlagencytechtest/src/App.scss
@@ -10,7 +10,7 @@
     font-weight: 700;
     border-radius: 4px;
     transition: background-color 0.3s ease;
-    font-family: 'Roboto', sans-serif;
+    font-family: $font-family-primary;
 }
 
 .header {
