--- a/idhlagencytechtest/src/scss/_base.scss
+++ b/idhlagencytechtest/src/scss/_base.scss
@@ -1,7 +1,25 @@
+//page base colors
+$color-brand-primary: #FE783E; // The orange and brown button color
+$color-brand-secondary: #000000;
+$color-background-light: #F5F7F8; 
+$color-background-product: #E5EFF0;
+// --- fonts ---
+$font-family-primary: 'Roboto', sans-serif;
+$font-family-secondary: 'Open Sans', sans-serif;
+
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
+
+body {
+    font-family: $font-family-secondary;
+    line-height: 1.5;
+    color: #333;
+    background-color: white;
+    overflow-x: hidden; 
 }
 
 // ---  re-usuable button component ---
@@ -14,6 +32,24 @@
     font-size: 0.9rem;
     border-radius: 4px;
     transition: background-color 0.3s ease;
-    font-family: 'Roboto', sans-serif;
+    font-family: $font-family-primary;
     letter-spacing: 0.5px;
 }
+.button--primary {
+    background-color: $color-brand-primary; 
+    color: white;
+}
+
+.button--primary:hover {
+    background-color: darken($color-brand-primary, 10%);
+}
+
+.button--secondary {
+    @extend .button;
+    background-color: $color-brand-primary; 
+    color: white;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+// END---  re-usuable button component ---
