--- a/idhlagencytechtest/src/scss/_layout.scss
+++ b/idhlagencytechtest/src/scss/_layout.scss
@@ -15,3 +15,17 @@
     font-size: 1.5rem;
     font-weight: 900;
 }
+
+.header__cart-btn {
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 5px;
+    color: $color-brand-secondary;
+    
+    svg {
+        width: 24px;
+        height: 24px;
+        display: block;
+    }
+}
