added content block html and stylesheets

--- a/idhlagencytechtest/src/App.scss
+++ b/idhlagencytechtest/src/App.scss
@@ -1,5 +1,8 @@
 @import 'scss/base'; 
 @import 'scss/layout';
+@import 'scss/contentblock';
+@import 'scss/productcard';
+
 
 /* reusable component: button */
 .button {
