--- a/idhlagencytechtest/src/scss/_contentBlock.scss
+++ b/idhlagencytechtest/src/scss/_contentBlock.scss
@@ -2,8 +2,13 @@
 .content-block__title {
     font-family: $font-family-primary;
     font-size: 2rem;
+    font-weight: 900;
+    margin-bottom: 20px;
 }
 
 .content-block__text {
+    max-width: 500px;
+    line-height: 1.7;
+    font-size: 1.1rem;
     color: #666;
 }
