--- a/idhlagencytechtest/src/scss/_productCard.scss
+++ b/idhlagencytechtest/src/scss/_productCard.scss
@@ -1,9 +1,10 @@
 .product-card {
     background-color: white;
     padding: 20px;
+    border-radius: 8px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
     text-align: center;
-
+    max-width: 320px;
 }
 
 .product-card__image {
