added cart component html and styling classes

--- a/idhlagencytechtest/src/App.scss
+++ b/idhlagencytechtest/src/App.scss
@@ -2,6 +2,7 @@
 @import 'scss/layout';
 @import 'scss/contentblock';
 @import 'scss/productcard';
+@import 'scss/cart.scss';
 
 * {
     box-sizing: border-box;
