--- a/idhlagencytechtest/src/scss/_cart.scss
+++ b/idhlagencytechtest/src/scss/_cart.scss
@@ -1,18 +1,43 @@
 // --- slide-Out cart and overlay ---
 .cart-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    z-index: 99;
+    opacity: 0; 
+   // visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
 
 }
 
 .cart-overlay--is-open {
-
+    opacity: 1;
+    visibility: visible;
 }
 
 // --- slide cart component ---
 .slide-cart {
-
+   position: fixed;
+   top: 0;
+   right: 0;
+   width: 100%; 
+   max-width: 350px; 
+   height: 100%;
+   background-color: white;
+   z-index: 100;
+   display: flex;
+   flex-direction: column;
+    
+    //slide animation
+    transform: translateX(100%);
+    transition: transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 .slide-cart--is-open {
+    transform: translateX(0);
 
 }
 
