--- a/idhlagencytechtest/src/scss/_contentBlock.scss
+++ b/idhlagencytechtest/src/scss/_contentBlock.scss
@@ -4,6 +4,10 @@
     font-size: 2rem;
     font-weight: 900;
     margin-bottom: 20px;
+
+     @media (min-width: 768px) {
+        font-size: 3rem;
+    }
 }
 
 .content-block__text {
