--- a/idhlagencytechtest/src/scss/_productCard.scss
+++ b/idhlagencytechtest/src/scss/_productCard.scss
@@ -2,21 +2,29 @@
     background-color: white;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);    
     text-align: center;
     max-width: 320px;
 }
 
 .product-card__image {
     width: 100%;
-    height: 300px;
-    margin-bottom: 10px;
+    height: auto;
+    max-height: 250px;
+    object-fit: contain;
+    margin-bottom: 20px;
 }
 
 .product-card__title {
     font-family: $font-family-primary;
+    font-size: 1.1rem;
+    font-weight: 700;
+    margin-bottom: 5px;
 }
 
 .product-card__price {
-    color: $color-brand-primary;
+     color: $color-brand-primary;
+    font-weight: 700;
+    margin-bottom: 20px;
+    font-size: 1.1rem;
 }
